--- a/swiper.html
+++ b/swiper.html
@@ -124,7 +124,7 @@
   <section id="mainBanner">
     <div class="swiper" >
           <div class="swiper-wrapper">
-                <div class="swiper-slide  bg0">
+                <div class="swiper-slide  bg0" data-btn="평강탕 할인">
                   <div class="container h-100 d-flex aic">
                       <h2 class="notoS f64 fc_white medium">
                         <p class="overh">
@@ -136,7 +136,7 @@
                       </h2>
                   </div>                    
                 </div>
-                <div class="swiper-slide  bg1">
+                <div class="swiper-slide  bg1" data-btn="ㅁㄴㅇㄹㄴㅁㅇㄻㄴㅇ">
                   <div class="container h-100 d-flex aic">
                     <h2 class="notoS f64 fc_white medium">
                       <p class="overh">
@@ -148,7 +148,7 @@
                   </h2>
                   </div>  
                 </div>
-                <div class="swiper-slide  bg2">
+                <div class="swiper-slide  bg2" data-btn="ㅁㄴㅇㄻㄴㅇㄹ">
                   <div class="container h-100 d-flex aic">
                     <h2 class="notoS f64 fc_white medium">
                       <p class="overh">
@@ -174,7 +174,7 @@
 
   <script>
     //실행식
-    const bannerText = ["편강한의원 찐후기","한약소개","예약하기"];
+    //const bannerText = ["편강한의원 찐후기","한약소개","예약하기"];
     const swiper_mainBanner = new Swiper("#mainBanner .swiper", {
        loop: true,
        autoplay: {
@@ -185,7 +185,8 @@
          el: "#mainBanner .swiper-pagination",
          clickable: true,
          renderBullet: function (index, className) {
-           return `<span class="${className}">${bannerText[index]}</span>`;
+          console.log(this .slides[index].dataset.btn); 
+           return `<span class="${className}">${this .slides[index].dataset.btn}</span>`;
          },
        },
      });
